top-bar menu items alignment issues

--- a/src/app/leader-board/leader-board.component.css
+++ b/src/app/leader-board/leader-board.component.css
@@ -25,7 +25,7 @@
 }
 
 .top-bar-items-right{
-  width:46% !important;
+  width:46%;
     cursor: pointer;
 }
 
@@ -106,4 +106,13 @@ table td {
   margin-top: 2%;
   background-color: #b8874d;
   opacity: .9;
+}
+
+
+@media only screen and (min-width: 900px){
+  .top-bar-items-right{
+    width: 10% !important;
+    float: right !important;
+    margin-right: 5%;
+  }
 }
